# ccxt2clickhouse

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
src/ccxt2clickhouse/: .env  .env.example  __init__.py  __main__.py  ccxt2clickhouse.py  core.py  daemon.py  exceptions.py  redis_worker.py  schema.sql  timeframe.py
