[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ccxt2clickhouse"
version = "0.1.0"
description = "Daemon for loading cryptocurrency quotes from exchanges via CCXT into ClickHouse"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["cryptocurrency", "ccxt", "clickhouse", "trading", "quotes", "ohlcv"]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
ccxt2clickhouse-daemon = "ccxt2clickhouse.ccxt2clickhouse:main"

